<resources>
    <string name="app_name">Saitama\'s Bike Rent</string>

    <!-- Strings related to navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to menu -->
    <string name="action_about">About</string>

    <!-- Strings related to login -->
    <string name="title_activity_signin">Welcome to Saitama\'s Bike Rent</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="action_sign_up">New User? Sign up</string>
    <string name="error_invalid_email">This email is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="my_position">My position</string>

    <!-- Strings related to places (map) -->
    <string name="title_activity_maps">Saitama\' Bike Rent</string>

    <!-- Strings related to rent -->
    <string name="error_invalid_card_number">This card number is invalid</string>
    <string name="error_invalid_month">This month is invalid</string>
    <string name="error_invalid_year">This year is invalid</string>
    <string name="error_invalid_code">This code is invalid</string>

    <!-- Strings related to signup -->
    <string name="title_activity_signup">Signup</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="description_form_sign_up">Dear user, please fill out this form to signup</string>

    <!-- Strings related to navigation drawer menu-->
    <string name="menu_map">Map</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_exit">Exit</string>
    <string name="alert_title_logout">Logout</string>
    <string name="alert_message_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message_error">Sorry, try again.</string>
    <string name="message_coming_soon">Coming soon...</string>
    <string name="message_welcome_back">Welcome back!</string>

</resources>
