<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@mipmap/android_map"
            android:title="@string/menu_map" />

        <item
            android:id="@+id/nav_view_settings"
            android:icon="@mipmap/android_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_view_help"
            android:icon="@mipmap/android_help"
            android:title="@string/menu_help" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@mipmap/android_log_out"
            android:title="@string/menu_exit" />

    </group>

</menu>
